Update styles and layout in index.html for improved aesthetics and responsiveness; adjust color scheme, typography, and spacing, and update copyright year to 2025.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>IGCSE 学习资源</title>
     <style>
         :root {
-            --primary-color: #0076ff;
-            --text-color: #333;
-            --bg-color: #fff;
-            --header-height: 60px;
+            --primary-color: #4F46E5;
+            --primary-hover: #4338CA;
+            --text-color: #1F2937;
+            --bg-color: #F9FAFB;
+            --card-bg: #FFFFFF;
+            --header-height: 70px;
+            --border-radius: 16px;
+            --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         * {
@@ -20,7 +24,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
+            line-height: 1.7;
             color: var(--text-color);
             background-color: var(--bg-color);
         }
@@ -31,18 +35,22 @@
             left: 0;
             right: 0;
             height: var(--header-height);
-            background-color: var(--primary-color);
-            color: white;
+            background-color: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(8px);
+            color: var(--text-color);
             display: flex;
             align-items: center;
             padding: 0 2rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
             z-index: 1000;
         }
 
         .header h1 {
             font-size: 1.5rem;
-            font-weight: 600;
+            font-weight: 700;
+            background: linear-gradient(135deg, var(--primary-color), #818CF8);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .nav {
@@ -50,15 +58,18 @@
         }
 
         .nav a {
-            color: white;
+            color: var(--text-color);
             text-decoration: none;
             margin-left: 2rem;
             font-weight: 500;
-            transition: opacity 0.2s;
+            transition: var(--transition);
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
         }
 
         .nav a:hover {
-            opacity: 0.8;
+            background-color: var(--bg-color);
+            color: var(--primary-color);
         }
 
         .main {
@@ -71,18 +82,24 @@
 
         .hero {
             text-align: center;
-            padding: 4rem 0;
+            padding: 6rem 0;
+            background: linear-gradient(135deg, rgba(79, 70, 229, 0.1), rgba(129, 140, 248, 0.1));
+            border-radius: var(--border-radius);
+            margin-bottom: 4rem;
         }
 
         .hero h2 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: var(--primary-color);
+            font-size: 3rem;
+            margin-bottom: 1.5rem;
+            background: linear-gradient(135deg, var(--primary-color), #818CF8);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            line-height: 1.2;
         }
 
         .hero p {
-            font-size: 1.2rem;
-            color: #666;
+            font-size: 1.25rem;
+            color: #4B5563;
             max-width: 600px;
             margin: 0 auto;
         }
@@ -91,23 +108,27 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
-            margin-top: 4rem;
+            margin: 4rem 0;
         }
 
         .feature-card {
             padding: 2rem;
-            border-radius: 8px;
-            background-color: #f8f9fa;
-            transition: transform 0.2s;
+            border-radius: var(--border-radius);
+            background-color: var(--card-bg);
+            transition: var(--transition);
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.02);
         }
 
         .feature-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.05), 0 10px 10px -5px rgba(0, 0, 0, 0.02);
         }
 
         .feature-card h3 {
             color: var(--primary-color);
             margin-bottom: 1rem;
+            font-size: 1.5rem;
         }
 
         .subjects {
@@ -116,9 +137,12 @@
 
         .section-title {
             text-align: center;
-            font-size: 2rem;
-            color: var(--primary-color);
-            margin-bottom: 2rem;
+            font-size: 2.5rem;
+            color: var(--text-color);
+            margin-bottom: 3rem;
+            background: linear-gradient(135deg, var(--primary-color), #818CF8);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .subject-grid {
@@ -129,61 +153,107 @@
         }
 
         .subject-card {
-            background: white;
-            border-radius: 12px;
+            background: var(--card-bg);
+            border-radius: var(--border-radius);
             padding: 2rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
+            transition: var(--transition);
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.02);
         }
 
         .subject-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.05), 0 10px 10px -5px rgba(0, 0, 0, 0.02);
         }
 
         .subject-card h3 {
             color: var(--primary-color);
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
             font-size: 1.5rem;
         }
 
         .subject-content {
             list-style: none;
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         .subject-content li {
-            margin: 0.5rem 0;
+            margin: 1rem 0;
             color: var(--text-color);
             position: relative;
             padding-left: 1.5rem;
         }
 
         .subject-content li:before {
-            content: "•";
+            content: "→";
             color: var(--primary-color);
             position: absolute;
             left: 0;
         }
 
+        .subject-content a {
+            color: var(--text-color);
+            text-decoration: none;
+            transition: var(--transition);
+        }
+
+        .subject-content a:hover {
+            color: var(--primary-color);
+        }
+
         .subject-link {
             display: inline-block;
             color: white;
-            background-color: var(--primary-color);
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
+            background: linear-gradient(135deg, var(--primary-color), #818CF8);
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
             text-decoration: none;
-            transition: background-color 0.3s ease;
+            transition: var(--transition);
+            font-weight: 500;
+            box-shadow: 0 4px 6px rgba(79, 70, 229, 0.2);
         }
 
         .subject-link:hover {
-            background-color: #0056cc;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 12px rgba(79, 70, 229, 0.3);
+            background: linear-gradient(135deg, #4338CA, #6366F1);
         }
 
         .footer {
-            background-color: #f8f9fa;
-            padding: 2rem;
+            background-color: white;
+            padding: 3rem 2rem;
             text-align: center;
-            margin-top: 4rem;
+            margin-top: 6rem;
+            border-top: 1px solid rgba(0, 0, 0, 0.05);
+        }
+
+        .footer-content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .social-links {
+            margin-bottom: 1.5rem;
+        }
+
+        .social-links a {
+            color: var(--text-color);
+            text-decoration: none;
+            margin: 0 1rem;
+            transition: var(--transition);
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            background-color: var(--bg-color);
+        }
+
+        .social-links a:hover {
+            color: var(--primary-color);
+            background-color: rgba(79, 70, 229, 0.1);
+        }
+
+        .copyright {
+            color: #6B7280;
+            font-size: 0.875rem;
         }
 
         @media (max-width: 768px) {
@@ -192,7 +262,12 @@
             }
 
             .nav a {
-                margin-left: 1rem;
+                margin-left: 0.5rem;
+                padding: 0.5rem;
+            }
+
+            .hero {
+                padding: 4rem 1rem;
             }
 
             .hero h2 {
@@ -201,6 +276,11 @@
 
             .hero p {
                 font-size: 1rem;
+                padding: 0 1rem;
+            }
+
+            .section-title {
+                font-size: 2rem;
             }
         }
     </style>
@@ -229,7 +309,7 @@
                     <a href="#" target="_blank" rel="noopener noreferrer">QQ</a>
                     <a href="#" target="_blank" rel="noopener noreferrer">微博</a>
                 </div>
-                <p class="copyright">© 2024 IGCSE学习资源. 保留所有权利。</p>
+                <p class="copyright">© 2025 IGCSE学习资源. 保留所有权利。</p>
             </div>
         </footer>
 
@@ -291,13 +371,13 @@
                     <a href="#" target="_blank" rel="noopener noreferrer">QQ</a>
                     <a href="#" target="_blank" rel="noopener noreferrer">微博</a>
                 </div>
-                <p class="copyright">© 2024 IGCSE学习资源. 保留所有权利。</p>
+                <p class="copyright">© 2025 IGCSE学习资源. 保留所有权利。</p>
             </div>
         </footer>
     </main>
 
     <footer class="footer">
-        <p>© 2024 IGCSE 学习资源. All rights reserved.</p>
+        <p>© 2025 IGCSE 学习资源. All rights reserved.</p>
     </footer>
 </body>
 </html>
