--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
             }
         }
     </style>
+    <script src="language.js"></script>
 </head>
 <body>
     <header class="header">
@@ -293,6 +294,8 @@
             <a href="#subjects">课程</a>
             <a href="#resources">资源</a>
             <a href="#about">关于</a>
+            <a href="#" onclick="switchLanguage('zh')">中文</a>
+            <a href="#" onclick="switchLanguage('en')">English</a>
         </nav>
     </header>
 
