--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IGCSE 学习资源</title>
+    <title>Mission San Jose High School</title>
     <style>
         :root {
             --primary-color: #4F46E5;
@@ -288,9 +288,11 @@
 </head>
 <body>
     <header class="header">
-        <h1>IGCSE 学习资源</h1>
+        <h1>Mission San Jose High School</h1>
         <nav class="nav">
             <a href="#home">首页</a>
+            <a href="#" onclick="switchLanguage('zh')">中文</a>
+            <a href="#" onclick="switchLanguage('en')">English</a>
             <a href="#subjects">课程</a>
             <a href="#resources">资源</a>
             <a href="#about">关于</a>
