--- a/index.html
+++ b/index.html
@@ -285,8 +285,11 @@
         }
     </style>
     <script src="language.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="auth.js"></script>
+    <meta name="google-signin-client_id" content="YOUR_GOOGLE_CLIENT_ID">
 </head>
-<body>
+<body onload="initGoogleAuth()">
     <header class="header">
         <h1>Mission San Jose High School</h1>
         <nav class="nav">
@@ -298,6 +301,9 @@
             <a href="#about">关于</a>
             <a href="#" onclick="switchLanguage('zh')">中文</a>
             <a href="#" onclick="switchLanguage('en')">English</a>
+            <span id="userStatus"></span>
+            <a href="#" id="signIn" onclick="handleSignIn()">登录</a>
+            <a href="#" id="signOut" onclick="handleSignOut()" style="display: none;">登出</a>
         </nav>
     </header>
 
