初始化IGCSE学习资源网站

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         <li><a href="math.html#statistics">统计与概率</a></li>
                         <li><a href="math.html#functions">函数与图像</a></li>
                     </ul>
-                    <a href="math.html" class="subject-link">查看详情</a>
+                    <a href="science.html" class="subject-link">查看详情</a>
                 </div>
                 <div class="subject-card">
                     <h3>科学 (Science)</h3>
@@ -360,7 +360,7 @@
                         <li>生物：生命过程与生态</li>
                         <li>实验技能与方法</li>
                     </ul>
-                    <a href="math.html" class="subject-link">查看详情</a>
+                    <a href="science.html" class="subject-link">查看详情</a>
                 </div>
                 <div class="subject-card">
                     <h3>英语 (English)</h3>
@@ -370,7 +370,7 @@
                         <li>口语与听力训练</li>
                         <li>文学作品赏析</li>
                     </ul>
-                    <a href="math.html" class="subject-link">查看详情</a>
+                    <a href="english.html" class="subject-link">查看详情</a>
                 </div>
             </div>
         </section>
