添加历史和考试页面，更新首页和语言设置

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         <li><a href="math.html#statistics">统计与概率</a></li>
                         <li><a href="math.html#functions">函数与图像</a></li>
                     </ul>
-                    <a href="science.html" class="subject-link">查看详情</a>
+                    <a href="math.html" class="subject-link">查看详情</a>
                 </div>
                 <div class="subject-card">
                     <h3>科学 (Science)</h3>
@@ -371,6 +371,16 @@
                         <li>文学作品赏析</li>
                     </ul>
                     <a href="english.html" class="subject-link">查看详情</a>
+                </div>
+                <div class="subject-card">
+                    <h3>历史 (History)</h3>
+                    <ul class="subject-content">
+                        <li>世界历史重大事件</li>
+                        <li>历史解释与评价</li>
+                        <li>区域历史研究</li>
+                        <li>历史论文写作</li>
+                    </ul>
+                    <a href="history.html" class="subject-link">查看详情</a>
                 </div>
             </div>
         </section>
