--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
             <a href="#" onclick="switchLanguage('zh')">中文</a>
             <a href="#" onclick="switchLanguage('en')">English</a>
             <a href="#subjects">课程</a>
+            <a href="exam.html">模拟考试</a>
             <a href="#resources">资源</a>
+            <a href="exam.html">模拟考试</a>
             <a href="#about">关于</a>
             <a href="#" onclick="switchLanguage('zh')">中文</a>
             <a href="#" onclick="switchLanguage('en')">English</a>
@@ -336,6 +338,7 @@
             <div class="feature-card">
                 <h3>模拟考试</h3>
                 <p>定期更新的模拟试题和详细解析，助你备战考试。</p>
+                <a href="exam.html" class="subject-link">开始考试</a>
             </div>
         </section>
 
